Broadway CHAIN - SANDBOX/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Employment_Education_Training_3_from__c</fullName>
        <label>Employment/Education/Training 3 from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Education_Training_3_to__c</fullName>
        <label>Employment/Education/Training 3 to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Employed - full time (16 hours or more)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed - part time (less than 16 hours)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed - intermittent/casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Training_Education_1__c</fullName>
        <label>Employment/Training/Education 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Training_Education_2__c</fullName>
        <label>Employment/Training/Education 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <inlineHelpText>List person description, equipment; sleeping bag etc.</inlineHelpText>
        <label>Person description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Date_Last_Left_Prison__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estimated Date Last Left Prison</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnic_Origin__c</fullName>
        <label>Ethnic Origin</label>
        <picklist>
            <picklistValues>
                <fullName>White - British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White - Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British - Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British - Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British - Pakistani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or Black British - African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or Black British - Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or Black British - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gypsy/Romany/Irish Traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed - White &amp; Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed - White &amp; Black African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed - White &amp; Black Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnic_origin_TRIO__c</fullName>
        <description>Ethnic origin field for use by Thames Reach TRIO project</description>
        <label>Ethnic Origin (TRIO)</label>
        <picklist>
            <picklistValues>
                <fullName>Asian - Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian - British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian - Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian - Pakistani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black - African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black - British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black - Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White - British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White - Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White - European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Ethnicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_slept_rough__c</fullName>
        <label>Ever slept rough?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known/stated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ex_offenders_additional_notes__c</fullName>
        <label>Ex-offenders additional notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ex_offenders_checklist__c</fullName>
        <label>Ex-offenders licence/supervision order</label>
        <picklist>
            <picklistValues>
                <fullName>Anti-Social Behaviour Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic Conditional Release Licence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Service Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discretionary Cond. Release Licence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Rehabilitation Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended supervision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk/Dangerous Offender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known to MAPPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Licence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation Order/Community Sentence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule 1 Offender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 42(2) MHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Young Offenders Institute Licence</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>First_Name_Encrypted__c</fullName>
        <label>First Name (Encrypted)</label>
        <length>40</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>First_Name_admin_only__c</fullName>
        <description>Editable only by admin</description>
        <label>First Name (admin only)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_accessed_NSNO_Hub__c</fullName>
        <label>First accessed NSNO Hub</label>
        <summarizedField>Timeline_Event__c.Arrival_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Timeline_Event__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>NSNO Referrals</value>
        </summaryFilterItems>
        <summaryForeignKey>Timeline_Event__c.Client__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_accessed_day_centre_Passage__c</fullName>
        <label>First accessed day centre (Passage)</label>
        <summarizedField>Session_attendance__c.Session_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Session_attendance__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Session attendance_Passage</value>
        </summaryFilterItems>
        <summaryForeignKey>Session_attendance__c.Client__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_accessed_day_night_centre_CSTM__c</fullName>
        <label>First accessed day/night centre (CSTM)</label>
        <summarizedField>Session_attendance__c.Session_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Session_attendance__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Session attendance_CSTM</value>
        </summaryFilterItems>
        <summaryForeignKey>Session_attendance__c.Client__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_seen_A_H_CSTM_apex__c</fullName>
        <label>First seen A&amp;H (CSTM)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_seen_RS_CSTM_apex__c</fullName>
        <label>First seen RS (CSTM)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_seen_RS_Passage_apex__c</fullName>
        <label>First seen RS (Passage)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flow_completed__c</fullName>
        <formula>If( OR (Count_of_new_rs_flow_forms__c &gt; 0, ISBLANK ( Date_First_Seen_Rough_Sleeping__c )), &quot;&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000002sVAf&quot;, &quot;frowning&quot;, 45, 45))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flow completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_notes__c</fullName>
        <label>Flow notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frequency_of_drug_use__c</fullName>
        <label>Frequency of drug use</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasionally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rarely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fuzzy_Search_Field__c</fullName>
        <formula>FirstName &amp;&quot; &quot;&amp; LastName &amp;&quot; - &quot; &amp;
text(Day (Birthdate))&amp;&quot;/&quot;&amp;text(Month (Birthdate))&amp;&quot;/&quot;&amp;text(Year (Birthdate)) &amp; &quot; &quot; &amp; 
right(&quot;00&quot;&amp;text(Day (Birthdate)),2) &amp;&quot;/&quot;&amp; right(&quot;00&quot;&amp;text(Month (Birthdate)),2) &amp;&quot;/&quot;&amp; text(Year (Birthdate)) &amp; &quot; &quot; &amp; 
right(&quot;00&quot;&amp;text(Day (Birthdate)),2) &amp;&quot;/&quot;&amp; right(&quot;00&quot;&amp;text(Month (Birthdate)),2) &amp;&quot;/&quot;&amp; right(&quot;00&quot;&amp;text(Year (Birthdate)),2) &amp; &quot; &quot; &amp; case(Month(Birthdate),1,&quot;January&quot;,2,&quot;February&quot;,3,&quot;March&quot;,4,&quot;April&quot;,5,&quot;May&quot;,6,&quot;June&quot;,7,&quot;July&quot;,8,&quot;August&quot;,9,&quot;September&quot;,10,&quot;October&quot;,11,&quot;November&quot;,
12,&quot;December&quot;,&quot;unknown&quot;) &amp;&quot; - &quot;&amp;
text( Borough_Last_Seen_Rough_Sleeping__c)  &amp;&quot; - &quot;&amp;
 ClientID__c  &amp;&quot; - &quot;&amp;
 Email  &amp;&quot; - &quot;&amp;
  MobilePhone  &amp;&quot; - &quot;&amp;
 Nickname__c  &amp;&quot; - &quot;&amp;
 NINumber__c  &amp;&quot; - &quot;&amp;
 Other_Names__c  &amp;&quot; - &quot;&amp;
 MailingPostalCode &amp;&quot; - &quot;&amp;
  MailingStreet &amp; &quot; - &quot;&amp;
National_ID_Number__c &amp; &quot; - &quot; &amp;
 Merged_with__c &amp; &quot; - &quot; &amp;
Equipment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fuzzy Search Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAF_St_Mungo_s__c</fullName>
        <label>GAF (St Mungo&apos;s)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLA_Group__c</fullName>
        <formula>If( ISPICKVAL( GLA_List__c ,&quot;RS205_1&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001c7kG&quot;, &quot;RS205_1&quot;, 20, 60),
If( ISPICKVAL( GLA_List__c ,&quot;RS205_2&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001c7ld&quot;, &quot;RS205_2&quot;, 15, 60),
If( ISPICKVAL( GLA_List__c ,&quot;RS205_13&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C00000024oBG&quot;, &quot;RS205_13&quot;, 20, 70),
If( ISPICKVAL( GLA_List__c ,&quot;RS205_14&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000002O6zk&quot;, &quot;RS205_13&quot;, 20, 70),
If( ISPICKVAL( GLA_List__c ,&quot;Returner&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001c7li&quot;, &quot;Returner&quot;, 20, 70),
If( ISPICKVAL( GLA_List__c ,&quot;Famous faces&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001c7lx&quot;, &quot;Famous faces&quot;, 20, 110),
If( ISPICKVAL( GLA_List__c ,&quot;Wanderer&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001c7ls&quot;, &quot;Wanderer&quot;, 20, 80),&quot;&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GLA Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLA_List_Allocated_Borough__c</fullName>
        <description>Indicates borough to which client has been assigned with regard to their membership of GLA special list (e.g. RS205, Famous Faces etc.)</description>
        <label>GLA List Allocated Borough</label>
        <picklist>
            <picklistValues>
                <fullName>Barking &amp; Dagenham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bexley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bromley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croydon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenwich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hackney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hammersmith &amp; Fulham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haringey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Havering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heathrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hillingdon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hounslow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kensington &amp; Chelsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kingston upon Thames</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lambeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lewisham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redbridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sutton</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLA_List_Westminster_team_responsible__c</fullName>
        <label>GLA List (Westminster team responsible)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLA_List_Withdrawn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if client&apos;s allocation toGLA special list (e.g. RS205, Famous Faces etc.) has been withdrawn.</description>
        <label>GLA List Withdrawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLA_List__c</fullName>
        <description>Indicates if a client has been allocated to a GLA special list (e.g. RS205, Famous Faces etc.)</description>
        <label>GLA List</label>
        <picklist>
            <picklistValues>
                <fullName>RS205_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS205_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS205_13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS205_14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Famous Faces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wanderer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GP_details__c</fullName>
        <label>GP details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GP_registered__c</fullName>
        <label>GP registered</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gambling__c</fullName>
        <label>Gambling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known/stated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender_Identity_TRIO__c</fullName>
        <description>Gender/identity field for use by TRIO project.</description>
        <label>Gender/Identity (TRIO)</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transgender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transgender</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Green_Star__c</fullName>
        <label>Green Star</label>
        <picklist>
            <picklistValues>
                <fullName>Advice &amp; Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workspace</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Green_Star_last_modified__c</fullName>
        <label>Green Star last modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HHT_last_updated__c</fullName>
        <label>HHT last updated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPU_Housing_Options_in_last_12_months__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HPU/Housing Options (in last 12 months)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HPU_Notes__c</fullName>
        <label>HPU Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Historical_and_current_housing_issues__c</fullName>
        <label>Historical and current housing issues</label>
        <picklist>
            <picklistValues>
                <fullName>Anti-social behaviour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care leaver leaving foster care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current rent arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current service charge arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escaping sexual abuse/harrassment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escaping violence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evcited - noise nuisance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evicted from previous accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evicted - rent arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Had previous tied accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History of abandoning tenancies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History of noise nuisance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History of rent arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History of RS &amp; street activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History of shared accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital admission/discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inability to cope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaving residential care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility difficulties affecting access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need additional security in home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs sheltered accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs supported accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never had independent accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding repairs issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overcrowding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship breakdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale of property</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>History_of_volunteering__c</fullName>
        <label>History of volunteering</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Home_Office_Ref_No__c</fullName>
        <label>Home Office Ref No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeless_Health_Team__c</fullName>
        <formula>If(  Needs_to_see_HHT__c ,IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000002aZd6&quot;, &quot;exclamation&quot;, 30, 60),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Homeless Health Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeless_Prevention_Interview_completed__c</fullName>
        <label>Homeless Prevention Interview completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Housing_First_Cohort__c</fullName>
        <description>Indicates whether client is on Housing First list, and if so which organisation is working with them</description>
        <inlineHelpText>Indicates whether client is on Housing First list, and if so which organisation is working with them</inlineHelpText>
        <label>Housing First Cohort</label>
        <picklist>
            <picklistValues>
                <fullName>Housing First - Broadway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing First - SHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing First - Thames Reach</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Housing_History__c</fullName>
        <label>Housing History</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Housing_issues_general__c</fullName>
        <inlineHelpText>Use this section to highlight any housing issues or any identified patterns in relation to the client&apos;s housing difficulties</inlineHelpText>
        <label>Housing issues (general)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAF_St_Mungo_s__c</fullName>
        <label>IAF (St Mungo&apos;s)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IAF_completed_CSTM__c</fullName>
        <formula>IF (OR (NOT(ISBLANK( Most_recent_IAF_completed_CSTM_apex__c )), IAF_not_required__c), IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M3XW&quot;, &quot;tick&quot;, 20, 20), 
IF ( OR (AND (ISBLANK( Most_recent_IAF_completed_CSTM_apex__c ), CSTM_new_to_CHAIN_Plus__c=1), Days_since_last_contact_with_CSTM__c &gt;182.5), IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M3Xb&quot;, &quot;cross&quot;, 20, 20),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAF_not_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAF not required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_proof_on_file__c</fullName>
        <label>ID proof on file</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_provided__c</fullName>
        <label>ID provided</label>
        <picklist>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving Licence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identity Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_provided_other_notes__c</fullName>
        <label>ID provided other (notes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identified_ESOL_needs__c</fullName>
        <label>Identified ESOL needs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known/stated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identified__c</fullName>
        <label>Identified numeracy needs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known/stated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>